<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.createtodo.ToDoCreationFragment">
 <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="14sp"
        style="@style/Widget.Material3.CardView.Filled"
        android:background="@drawable/title"
        android:padding="16dp"
        android:hint="@string/title"
        android:layout_marginTop="24dp"
        android:textColor="@color/black_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/fileduserna"
        android:padding="16dp"
        android:hint="@string/description"
        android:gravity="top"
        android:textColor="@color/black_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_title" />

     <EditText
         android:id="@+id/assigned"
         style="@style/Widget.Material3.CardView.Filled"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="8dp"
         android:visibility="gone"
         android:background="@drawable/title"
         android:hint="@string/assignee"
         android:padding="16dp"
         android:layout_marginBottom="8dp"
         android:textColor="@color/black_title"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/text_view_category"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_description" />


     <TextView
         android:id="@+id/text_view_category"
         style="@style/create_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:fontFamily="@font/roboto_medium"
         android:text="@string/category"
         android:textAppearance="@style/category"
         app:layout_constraintBottom_toTopOf="@id/assigned"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/assigned" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/margin_small_8"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/text_view_category"
        app:layout_constraintTop_toBottomOf="@id/text_view_category"
        app:singleSelection="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_personal_todo"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/personal_todo"
                android:textColor="@color/md_theme_light_primary"
                app:chipIcon="@drawable/personicon"
                app:chipStartPadding="@dimen/space_44"
                app:chipStrokeColor="@color/md_theme_light_primary"/>

            <com.google.android.material.chip.Chip
            android:id="@+id/chip_team_todo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="64dp"
            android:text="@string/team_todo"
            android:textColor="@color/md_theme_light_primary"
            app:chipIcon="@drawable/teamicon"
            app:chipStrokeColor="@color/md_theme_light_primary"
            app:iconStartPadding="48dp" />
        </LinearLayout>
    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create"
        style="@style/create_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/button"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create"
        android:elevation="5dp"
        android:clickable="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_category" />


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>